--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Newton.Ai</title>
     <meta name="image" href="./newtonico.png">
     <meta name="description" content="Hey there I like to Help people with my skills ">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <meta property="og::image" href="./newton ico.png">
 </head>
 <body>
     <div id="App">
