--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="image" href="./newtonico.png" />
     <meta name="description" content="Hey there, I am Newton. " />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <meta property="og::image" content="./newton ico.png" />
+    <meta property="og::image" content="https://cdn.discordapp.com/attachments/1080886691067338815/1133769046601498735/newton_ico.png" />
     <meta name="author" content="Sarthak" />
     <meta
       name="keywords"
